--- a/Animal_Hotel.csproj
+++ b/Animal_Hotel.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Client\" />
     <Folder Include="wwwroot\img\user_images\" />
   </ItemGroup>
 
